syntax = "proto3";

package stream;

service Stream {
    rpc Stream(StreamRequest) returns (stream StreamEvent);
}

message StreamRequest {
    string name = 1; // stream name
    string requesterName = 2; //name of the service making the stream request
}

message StreamEvent {
    bytes Key    = 1; // Event key
    bytes Value  = 2; // Event value
    Metadata metadata = 3;
}

message Metadata {
    int64               EventTimestamp = 1; // timestamp in ns of when the event was recorded/created
    int64               OriginStreamTimestamp = 2;  // timestamp in ns of when the event was streamed by the first producer of the chain of streams
    int64               StreamTimestamp = 3; // timestamp in ns of when the event was streamed by the producer
    map<string, string> keyValue = 4;
}


message StreamDefinition {
    string name = 1;
    string dataType = 2;
    bool isDelete = 3; // on delete events, only the dataType will be empty
}
